--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,10 +1,16 @@
 spring:
   datasource:
     url: jdbc:mysql://localhost:3306/coupang
-    username: root
-    password: password123
+    username: admin
+    password: 1234
     driver-class-name: com.mysql.cj.jdbc.Driver
   jpa:
     hibernate:
       ddl-auto: update
     show-sql: true
+  elasticsearch:
+    uris: http://localhost:9200
+
+logging:
+  level:
+    org.elasticsearch.client: TRACE
